--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.20",
     "lucide-react": "^0.363.0",
     "next": "14.0.3",
