--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.1",
     "react-player": "^2.15.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
